se corrigio el link

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "hamepage" : "https://mpolancob.github.io/proyecto_fitlink",
+  "hamepage" : "https://mpolancob.github.io/frontend_fitlink",
   "name": "formulario-react",
   "version": "0.1.0",
   "private": true,
